2016-05-30  SilverNexus
	* fileperuser_search.c: Remove fileperuser_memcasemem_brute().
	  Outperformed even on needle length of 2 by fileperuser_memcasemem_boyer().
	* fileperuser_search.h: Remove prototype for fileperuser_memcasemem_brute().
	* jump_table.h: Adjust minimum threshold for building a jump table on
	  case-insensitive searches down to 1.
	* search.c: Move the declaration of last char* into no_case branch.
	  Remove branch that called fileperuser_memcasemem_brute().
	  Fix an error that caused the length left to increase as a file was
	  searched using the case-sensitive functions."
	* test/performance_test/Makefile: Remove fp_memcasemem_brute targets.
	* test/performance_test/main.c: Remove FP_MEMCASEMEM_BRUTE preprocessor checks
	  and subsequent code sections.
	* test/performance_test/run_test.sh: Remove fp_memcasemem_brute tests.
	* test/performance_test/README: Remove reference to fp_memcasemem_brute.
	* test/performance_test/LICENSES: Add a file describing the contents of the
	  test file and the applicable licenses.
	* test/search_test/LICENSES: Add a file describing the contents of the
	  test file and the applicable licenses.
	* test/search_test/test_search_results.sh: Add additional tests for ensuring
	  the proper handling of the end of the file.
	* test/search_test/test_*end: Add the results of the additional test cases
	  to compare against in the test script.
	* main.c: Optimize conversion of needle to lowercase on case-insensitive searches.

2016-05-29  SilverNexus
	* output.c: Use fwrite() instead of printf() when telling the user
	  the location of the output file.
	  Only close the output file when we opened one.
	* jump_table.c: Removed extraneous include.
	* fileperuser_search.c: Removed extraneous include.
	* test/performance_test/*: Added performance test to better judge
	  where the cutoffs for choosing a function should lie.
	* test/README: Add a readme to explain some rules for the tests.

2016-05-28  SilverNexus