@@ -17,6 +17,7 @@ FilePeruser User Guide
                          minimum level of log message to be printed.
        -n or --no-case: perform search without case-sensitivity
        -1 or --single-match: match search string at most once per line.
+       -b or --binary-files: search binary files as well as text files.
    Notes:
        all spaces in [search string], [root directory], and any excluded
            directories must be properly escaped to function properly
