@@ -1,3 +1,11 @@
+2016-06-01  SilverNexus
+	* parseArgs.c: Add arguments -b and --binary to toggle searching binary
+	  files.
+	* settings.h: Define search flag for binary files.
+	* search.c: Add Functionality to test for binary files.
+	* README: Updated usage to reflect new binary file search feature.
+	* doc/fileperuser.man: Added usage information for new arguments.
+
 2016-05-30  SilverNexus
 	* fileperuser_search.c: Remove fileperuser_memcasemem_brute().
 	  Outperformed even on needle length of 2 by fileperuser_memcasemem_boyer().
